Added more methods and fixed some bugs